<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            app:fontPath="fonts/HindVadodara-Bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connectionunavailable"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:padding="10dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nointernetcoonection"
            android:padding="10dp"
            android:lines="2"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/black"

            />



        <TextView            android:id="@+id/tvOpenSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opensettings"
            android:textColor="@color/orange_app"
            android:padding="15dp"
            android:textStyle="bold"
            android:textSize="@dimen/_11sdp"
            android:layout_gravity="right"


            />



    </LinearLayout>


</RelativeLayout>