<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context="mall.kwik.kwikmall.activities.FoodDetailsActivity">



    <RelativeLayout
        android:id="@+id/headerPayMode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imagePayModeBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_6sdp"
            android:layout_centerVertical="true"
            android:background="@drawable/leftarrowblack"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PAYMENTS"
            android:padding="5dp"
            app:fontPath="fonts/HindVadodara-Bold.ttf"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>


    <LinearLayout
        android:layout_below="@id/headerPayMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FCFCED"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_6sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp"
                android:text="@string/kwikmallmoney"/>
        </RelativeLayout>


        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="@dimen/_10sdp"
                android:padding="@dimen/_8sdp"
                android:layout_alignParentLeft="true"
                android:textColor="@color/black"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewstatement"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_10sdp"
                android:layout_alignParentRight="true"
                android:textColor="@color/orange_app"/>

        </RelativeLayout>



        <RelativeLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FCFCED"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_6sdp"
                android:textSize="@dimen/_11sdp"
                android:textColor="@color/black"
                android:text="@string/wallet"/>
        </RelativeLayout>




        <RelativeLayout
            android:layout_marginTop="@dimen/image_size5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/_8sdp"
                >

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:padding="@dimen/_5sdp"
                    android:layout_margin="@dimen/_5sdp"

                    android:background="@drawable/mastercard"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:text="@string/creditcard"/>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/linkaccount"
                android:paddingRight="10dp"
                android:textSize="@dimen/_10sdp"

                android:layout_centerVertical="true"
                android:textColor="@color/orange_app"/>

        </RelativeLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:padding="5dp"
            android:background="#FFECD6">

        </View>

        <RelativeLayout
            android:layout_marginTop="@dimen/image_size5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:paddingLeft="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/mobile"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_10sdp"

                    android:layout_marginLeft="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:text="@string/mobilemoney"/>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/linkaccount"
                android:paddingRight="10dp"
                android:textSize="@dimen/_10sdp"

                android:layout_centerVertical="true"

                android:textColor="@color/orange_app"/>

        </RelativeLayout>


        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:padding="5dp"
            android:background="#FFECD6">

        </View>
        <RelativeLayout
            android:layout_marginTop="@dimen/image_size5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:paddingLeft="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:padding="@dimen/_5sdp"
                    android:layout_margin="@dimen/_5sdp"

                    android:background="@drawable/cashondelivery"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"

                    android:layout_marginLeft="@dimen/_5sdp"
                    android:text="@string/cashondelivery"/>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/linkaccount"
                android:paddingRight="10dp"
                android:textSize="@dimen/_10sdp"

                android:layout_centerVertical="true"
                android:textColor="@color/orange_app"/>

        </RelativeLayout>




    </LinearLayout>



</RelativeLayout>