<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="mall.kwik.kwikmall.activities.FoodDetailsActivity">




    <RelativeLayout
        android:id="@+id/headerViewCart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/imageViewCartBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:layout_centerVertical="true"
            android:background="@drawable/leftarrowblack"
            />

        <TextView
            app:fontPath="fonts/HindVadodara-Bold.ttf"
            android:id="@+id/txtViewCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewcart"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>


    <View
        android:id="@+id/lineViewCart"
        android:layout_below="@+id/headerViewCart"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#B0B1B5"
        android:layout_marginRight="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp">

    </View>


    <RelativeLayout
        android:id="@+id/ralativeTotal"
        android:layout_below="@+id/lineViewCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true">

            <TextView
                android:id="@+id/txtItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/items"
                android:padding="@dimen/_4sdp"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txtTotalItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:padding="@dimen/_4sdp"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total: "
                android:padding="@dimen/_4sdp"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/txtTotatPriceViewCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$35"
                android:padding="@dimen/_4sdp"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/black"/>

        </LinearLayout>

    </RelativeLayout>



    <FrameLayout
        android:layout_below="@+id/ralativeTotal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        >


        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp">

        </android.support.v7.widget.RecyclerView>


        <ImageView
            android:visibility="invisible"
            android:id="@+id/imageCartEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/emptycart"
            />


    </FrameLayout>



    <LinearLayout
        android:id="@+id/bottomPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">


        <TextView
            android:visibility="gone"
            android:id="@+id/txtPlaceorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeorder"
            android:gravity="center"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:background="@color/orange_app"
            android:padding="10dp"
            android:textSize="@dimen/_12sdp"
           android:textColor="@color/white"/>


        <TextView
            android:visibility="gone"
            android:id="@+id/loginForOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginorsignuptoplace"
            android:gravity="center"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:background="@color/orange_app"
            android:padding="10dp"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"/>


    </LinearLayout>


    <!--
        <View
            android:id="@+id/line2"
            android:layout_below="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#B0B1B5"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp">

        </View>
        -->


    <!--<LinearLayout
        android:layout_below="@id/line2"
        android:id="@+id/footerPlaceorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dimorange"
        >





        <mall.kwik.kwikmall.Activities.CustomTextView.hindVadodraBoldTextView
            android:id="@+id/txtPlaceorder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeorder"
            android:gravity="center"
            android:padding="7dp"
            android:textSize="@dimen/image_size8"
            android:textColor="@color/white"/>

    </LinearLayout>-->



</RelativeLayout>
